--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>me.taylorkelly</groupId>
   <artifactId>mywarp</artifactId>
-  <version>1</version>
+  <version>1.10.5a</version>
   <name>MyWarp</name>
   <url>http://www.bukkit.org</url>
-  <repositories>
-    <repository>
-      <id>bukkut-repo</id>
-      <url>http://artifacts.lukegb.com/artifactory/repo</url>
-    </repository>
-  </repositories>
   <dependencies>
     <dependency>
       <groupId>org.bukkit</groupId>
@@ -21,18 +14,19 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-        <groupId>org.bukkit</groupId>
-        <artifactId>permissions</artifactId>
-        <version>2.0</version>
-        <type>jar</type>
-	<scope>compile</scope>
+        <groupId>com.nijikokun.bukkit</groupId>
+        <artifactId>Permissions</artifactId>
+        <version>2.5.5</version>
     </dependency>
-        <dependency>
+    <dependency>
+        <groupId>org.anjocaido</groupId>
+        <artifactId>GroupManager</artifactId>
+        <version>1.0-alpha-5-SNAPSHOT</version>
+    </dependency>
+    <dependency>
         <groupId>me.taylorkelly</groupId>
         <artifactId>help</artifactId>
-        <version>1.0</version>
-        <type>jar</type>
-	<scope>compile</scope>
+        <version>0.1.1</version>
     </dependency>
   </dependencies>
   <build>
