--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>me.taylorkelly</groupId>
   <artifactId>mywarp</artifactId>
-  <version>1.10.5c</version>
+  <version>1.10.6</version>
   <name>MyWarp</name>
   <url>http://www.bukkit.org</url>
   <dependencies>
@@ -14,9 +14,14 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+        <groupId>ru.tehkode</groupId>
+        <artifactId>PermissionsEx</artifactId>
+        <version>[100,)</version>
+    </dependency>
+    <dependency>
         <groupId>com.nijikokun.bukkit</groupId>
         <artifactId>Permissions</artifactId>
-        <version>2.5.5</version>
+        <version>[2.5.5,)</version>
     </dependency>
     <dependency>
         <groupId>org.anjocaido</groupId>
@@ -24,9 +29,9 @@
         <version>1.0-alpha-5-SNAPSHOT</version>
     </dependency>
     <dependency>
-        <groupId>me.taylorkelly</groupId>
-        <artifactId>help</artifactId>
-        <version>0.1.1</version>
+        <groupId>me.taylorkelly.help</groupId>
+        <artifactId>Help</artifactId>
+        <version>[0.2,)</version>
     </dependency>
   </dependencies>
   <build>
