--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>me.taylorkelly.mywarp</groupId>
   <artifactId>MyWarp</artifactId>
-  <version>1.10.7</version>
+  <version>2.0</version>
   <name>MyWarp</name>
   <url>http://www.bukkit.org</url>
   <dependencies>
@@ -22,6 +22,11 @@
         <groupId>com.nijikokun.bukkit</groupId>
         <artifactId>Permissions</artifactId>
         <version>[2.5.5,)</version>
+    </dependency>
+    <dependency>
+        <groupId>com.nijikokun.bukkit</groupId>
+        <artifactId>Permissions</artifactId>
+        <version>[3.0.6,)</version>
     </dependency>
     <dependency>
         <groupId>org.anjocaido</groupId>
@@ -61,7 +66,9 @@
         <version>2.3.1</version>
         <configuration>
           <archive>
-            <manifestFile>src/main/resources/MANIFEST.MF</manifestFile>
+            <manifestEntries>
+              <Class-Path>../lib/sqlite.jar ../lib/mysql-connector-java-bin.jar</Class-Path>
+            </manifestEntries>
           </archive>
         </configuration>
       </plugin>
