--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,7 @@
     <dependency>
         <groupId>com.nijikokun.bukkit</groupId>
         <artifactId>Permissions</artifactId>
-        <version>[2.5.5,)</version>
-    </dependency>
-    <dependency>
-        <groupId>com.nijikokun.bukkit</groupId>
-        <artifactId>Permissions</artifactId>
-        <version>[3.0.6,)</version>
+        <version>[2.5.5,],[3.1.2,]</version>
     </dependency>
     <dependency>
         <groupId>org.anjocaido</groupId>
