--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>me.taylorkelly.mywarp</groupId>
   <artifactId>MyWarp</artifactId>
-  <version>2.0</version>
   <name>MyWarp</name>
+  <version>2.0.1</version>
   <url>http://www.bukkit.org</url>
   <dependencies>
     <dependency>
@@ -14,29 +14,24 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-        <groupId>ru.tehkode</groupId>
+        <groupId>ru.tehkode.permissions.bukkit</groupId>
         <artifactId>PermissionsEx</artifactId>
-        <version>[1.02,)</version>
+        <version>1.14</version>
     </dependency>
-    <dependency>
+	<dependency>
         <groupId>com.nijikokun.bukkit</groupId>
         <artifactId>Permissions</artifactId>
-        <version>[2.5.5,)</version>
-    </dependency>
-    <dependency>
-        <groupId>com.nijikokun.bukkit</groupId>
-        <artifactId>Permissions</artifactId>
-        <version>[3.0.6,)</version>
+        <version>[2.5.5,],[3.1.6,]</version>
     </dependency>
     <dependency>
         <groupId>org.anjocaido</groupId>
         <artifactId>GroupManager</artifactId>
-        <version>1.0-alpha-5-SNAPSHOT</version>
+        <version>[1.0-alpha-5],[1.1]</version>
     </dependency>
     <dependency>
         <groupId>me.taylorkelly.help</groupId>
         <artifactId>Help</artifactId>
-        <version>[0.2,)</version>
+        <version>0.2</version>
     </dependency>
   </dependencies>
   <build>
@@ -65,12 +60,12 @@
         <artifactId>maven-jar-plugin</artifactId>
         <version>2.3.1</version>
         <configuration>
-          <archive>
-            <manifestEntries>
-              <Class-Path>../lib/sqlite.jar ../lib/mysql-connector-java-bin.jar</Class-Path>
-            </manifestEntries>
-          </archive>
-        </configuration>
+        	<archive>
+        		<manifestEntries>
+                	<Class-Path>../lib/sqlite.jar ../lib/mysql-connector-java-bin.jar</Class-Path>
+          		</manifestEntries>
+        	</archive>
+      	</configuration>
       </plugin>
     </plugins>
   </build>
