--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,22 @@
   <groupId>me.taylorkelly.mywarp</groupId>
   <artifactId>MyWarp</artifactId>
   <name>MyWarp</name>
-  <version>2.0.1</version>
+  <version>2.1</version>
   <url>http://www.bukkit.org</url>
   <dependencies>
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>1.1-R2-SNAPSHOT</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
     <dependency>
+        <groupId>me.taylorkelly.help</groupId>
+        <artifactId>Help</artifactId>
+        <version>0.2</version>
+    </dependency>
+        <dependency>
         <groupId>ru.tehkode.permissions.bukkit</groupId>
         <artifactId>PermissionsEx</artifactId>
         <version>1.14</version>
@@ -29,9 +34,9 @@
         <version>[1.0-alpha-5],[1.1]</version>
     </dependency>
     <dependency>
-        <groupId>me.taylorkelly.help</groupId>
-        <artifactId>Help</artifactId>
-        <version>0.2</version>
+    	<groupId>de.bananaco.permissions.Permissions</groupId>
+    	<artifactId>bPermissions</artifactId>
+    	<version>1.7.9.9</version>
     </dependency>
   </dependencies>
   <build>
