--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
     	<artifactId>bPermissions</artifactId>
     	<version>1.7.9.9</version>
     </dependency>
+    <dependency>
+    	<groupId>de.bananaco.bpermissions.imp.Permissions</groupId>
+    	<artifactId>bPermissions</artifactId>
+    	<version>2.9.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>${project.name}</finalName>
