--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,20 @@
     	<version>2.9.0</version>
     </dependency>
   </dependencies>
+  <repositories>
+    <repository>
+      <id>sk89q-mvn2</id>
+      <url>http://mvn2.sk89q.com/repo</url>
+    </repository>
+    <repository>
+      <id>bukkit-repo</id>
+      <url>http://repo.bukkit.org/content/groups/public</url>
+    </repository>
+    <repository>
+      <id>spout-repo</id>
+      <url>http://repo.spout.org/</url>
+    </repository>
+  </repositories>
   <build>
     <finalName>${project.name}</finalName>
     <plugins>
