--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,10 @@
 name: MyWarp
-version: 2.2
+version: ${m.version}-${build.number}-${p.version}
 author: spathizilla
 authors: 
   - flames
   - tkelly
+  - MiracleM4n
 softdepend:
   - Help
 main: me.taylorkelly.mywarp.MyWarp
