--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.2.5-R4.0</version>
-            <type>jar</type>
-            <scope>compile</scope>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
